--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,7 +69,7 @@
 	"zenMode.hideLineNumbers": false,
 	"zenMode.hideActivityBar": false,
 	"editor.accessibilitySupport": "off",
-	"workbench.colorTheme": "One Dark Pro Flat",
+	"workbench.colorTheme": "Quiet Light",
 	"livePreview.autoRefreshPreview": "On Changes to Saved Files",
 	"cSpell.language": "en,vi,lorem",
 	"editor.formatOnSave": true,
@@ -111,7 +111,7 @@
 	"tabnine.experimentalAutoImports": true,
 	"terminal.integrated.fontSize": 13,
 	"explorer.confirmDragAndDrop": false,
-	"editor.tabCompletion": "on",
+
 	"editor.multiDocumentOccurrencesHighlight": true,
 	"editor.bracketPairColorization.independentColorPoolPerBracketType": true,
 	"editor.guides.bracketPairs": true,
@@ -211,5 +211,8 @@
 		"[One Dark Pro]": {
 			"comments": "#e8eb5290"
 		}
-	}
+	},
+
+	"editor.tabCompletion": "onlySnippets",
+	"editor.snippetSuggestions": "top"
 }
