--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY='key from CLERK'
-CLERK_SECRET_KEY=sk_test_rHX6LOI2e0HSpyPwIw1Omiv8uI2LVcaqdbBDrWidNY
+CLERK_SECRET_KEY='CLERK_SECRET_KEY'
 
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
@@ -13,4 +13,4 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL='mysql://et8d34afq586lf00d717:pscale_pw_nFM6RZMh672XnaWm1REE99Czk1viyJxcDLeWeAjkPFT@aws.connect.psdb.cloud/ecommerece-store-demo?sslaccept=strict'
+DATABASE_URL='database_url'
