ft create and modify billboard

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,4 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL='database_url'
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="<Your Cloud Name>"
